# MusicTools

./: .gitignore  LICENSE  MusicTools.cabal  README.md  music-tools.agda-lib  stack.yaml
MuseScore/: musictools.qml
agda/: AIM32.lagda.md  Analysis.agda  Beethoven.agda  BitVec.agda  Canon.agda  Chord.agda  Constraint.agda  Counterpoint.agda  Counterpoint2.agda  Diatonic.agda  DivMod.agda  DivModAlt.agda  Exec.agda  Exercises.agda  Expr.agda  FarmCanon.agda  FarmFugue.agda  Fin.agda  Fmmh.agda  Frog.agda  Fugue.agda  HConstraint.agda  Hanon.agda  Harmony.agda  Instruments.agda  Interval.agda  Kennan.agda  Key.agda  Lemmas.agda  Location.agda  LookVsTime.agda  MConstraint.agda  Main.agda  MakeTracks.agda  Midi.agda  MidiEvent.agda  Misc.agda  Montuno.agda  Music.agda  Nat.agda  (+28 more)
agda/latex/: Pnwplse.tex  agda.sty
agda/old/: Analysis.agda  AssocList.agda  Canon.agda  Exercises.agda  Fin.agda  Fmmh.agda  Montuno.agda  Pnwplse.lagda  ScaleDegree.agda
code/: Harmony.agda  Interval.agda  Main.agda  Midi.agda  Piston.agda  README.md  ScaleDegree.agda
doc/: AIM32.lagda.md  MusicTools.tex  PnwplseAbstract.txt
doc/farm/: farm-abstract.bib  farm-abstract.tex  farm-slides.tex
doc/farm20/: FarmCanon.mid  FarmCanon.mscz  FarmFugue.mid  FarmFugue.mscz  README.md
doc/farm22/: abstract.bib  abstract.tex
doc/icfp/: acmart.cls  paper.tex
doc/icfp20/: abstract.tex  (+9 more)
haskell/: MusicTools.cabal
haskell/src/: Expr.hs  Main.hs  Midi.hs  Serial.hs  Smt.hs  Xml.hs
slides/: pnwplse.tex
src/: Chord.hs  Event.hs  Main.hs  Midi.hs  Montuno.hs  Note.hs  Scale.hs  TimedChord.hs
(+29 files in other folders)
