cabal-version:      3.8
name:               HMusicTools
synopsis:           Haskell support for MusicTools
version:            0.1.0.0
homepage:           https://github.com/halfaya/MusicTools
license:            MIT
author:             John Leo
maintainer:         leo@halfaya.org
copyright:          2023 John Leo

executable HMusicTools
  hs-source-dirs:   src
  main-is:          Main.hs
  build-depends:    base ^>=4.17.0.0, xml, sbv, text, split, HCodecs,
  other-modules:    Expr, Midi, Serial, Smt, Xml
  default-language: Haskell2010
  